# ESP32_keypad_rotdecode

./: .gitignore  CMakeLists.txt  README.md  start_Geany
components/keypad_rotdecode/: CMakeLists.txt  Kconfig  component.mk  keypad_rotdecode.c
components/keypad_rotdecode/include/: keypad_rotdecode.h
components/keypad_rotdecode/ulp/: debounce_decode.S
doc/: Developer.md  LICENSE  SwitchBounce.odg
geany/: geany.conf  geany.conf.bak  geany_socket_iris-Aspire-ES1-311__0
geany/filedefs/: filetypes.c  filetypes.common
geany/geany/: geany.conf
main/: CMakeLists.txt  keypad_example_main.c
